# pytest-snail

./: COMMUNITY.md  CONTRIBUTING.md  README.md  labels.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: run-checks.yml  upload-to-pypi.yml
src/pytest_snail/: __init__.py  plugin.py
src/pytest_turtle/: plugin.py
tests/: test_cli.py  test_marker.py  test_plugin.py
