[bumpversion]
current_version = 0.1.0.dev1
commit = True
tag = True
tag_name = {new_version}
files = setup.py

[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[flake8]
max-line-length = 88

[mypy]
python_version=3.6
follow_imports=normal
ignore_missing_imports=True
disallow_untyped_calls=True
warn_return_any=True
strict_optional=True
warn_no_return=True
warn_redundant_casts=True
warn_unused_ignores=True